<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ping.MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <ImageView
        android:id="@+id/img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/b"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/mtv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/login"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:hint="@string/qianzhui"
        app:layout_constraintBottom_toTopOf="@+id/et4"
        app:layout_constraintEnd_toStartOf="@+id/editText2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mtv" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:hint="@string/houzhui"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/et"
        app:layout_constraintTop_toBottomOf="@+id/mtv"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/et3"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="13dp"
        android:layout_marginStart="14dp"
        android:hint="@string/yanzhengma"
        app:layout_constraintBaseline_toBaselineOf="@+id/et4"
        app:layout_constraintEnd_toStartOf="@+id/et4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et" />

    <EditText
        android:id="@+id/et4"
        android:layout_width="207dp"
        android:layout_height="53dp"
        android:hint="@string/huoquyanzhengma"
        android:textColor="#494949"
        tools:layout_editor_absoluteX="140dp"
        tools:layout_editor_absoluteY="98dp" />


    <TextView
        android:id="@+id/tv"
        android:layout_width="@dimen/x330"
        android:layout_height="0dp"
        android:layout_marginBottom="14dp"
        android:gravity="center"
        android:text="@string/weizhuce"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et4"
        tools:ignore="MissingConstraints" />


    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="28dp"
        android:layout_marginStart="28dp"
        android:background="#FF5656"
        android:text="@string/denglu"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/checkBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv"
        tools:ignore="MissingConstraints" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="201dp"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="34dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv3"
        android:layout_width="0dp"
        android:layout_height="15dp"
        android:text="@string/yinsixieyi"
        app:layout_constraintBottom_toBottomOf="@+id/checkBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/checkBox"
        tools:ignore="MissingConstraints" />


</android.support.constraint.ConstraintLayout>
